finished overall page and quite responsive

--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,430 @@
-*{border:none;outline:none;padding:0;margin:0;box-sizing:border-box}body{font-size:1rem}ul{list-style-type:none}a{text-decoration:none;display:inline-block;color:inherit}
+@import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");
+* {
+  border: none;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 1rem;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
+  color: inherit;
+}
+
+.btn {
+  font-size: 1em;
+  letter-spacing: 0.32em;
+  background-color: white;
+  border: 1px solid black;
+  max-width: 316px;
+  display: grid;
+  place-items: center;
+  padding: .5em 2em;
+  transition: background-color .3s linear;
+}
+
+.btn:hover {
+  background-color: black;
+}
+
+.header__nav-bar-container, .footer__nav-bar-container, .header__hero-container, .about__container, .creations__container, .footer__flex-top, .footer__flex-bottom {
+  width: 80%;
+  max-width: 1114px;
+  padding: 4em 0;
+}
+
+.header__hero-heading, .creations__header, .about__description--header {
+  font-size: 3em;
+  font-weight: 300;
+  max-width: 100%;
+}
+
+@media (max-width: 1050px) {
+  .header__hero-heading, .creations__header, .about__description--header {
+    text-align: center;
+  }
+}
+
+@media (max-width: 640px) {
+  .header__hero-heading, .creations__header, .about__description--header {
+    font-size: 1.65em;
+  }
+}
+
+.btn, .header__hero-heading, .creations__header, .about__description--header, .creations__container {
+  text-transform: uppercase;
+}
+
+.btn, .header__nav-link, .footer__nav-link, .about__description--paragraph, .footer__flex-top, .footer__flex-bottom {
+  font-family: 'Alata', sans-serif;
+}
+
+.header__hero-heading, .creations__header, .about__description--header, .creations__list-link {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.btn:hover, .header__container, .creations__list-link, .footer__container {
+  color: white;
+}
+
+.btn {
+  color: black;
+}
+
+.header__nav-bar-container, .footer__nav-bar-container, .header__hero-container, .about__container, .creations__container, .footer__flex-top, .footer__flex-bottom, .about__description-container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header__container {
+  background-image: url("../images/desktop/image-hero.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media (max-width: 640px) {
+  .header__container {
+    background-image: url("../images/mobile/image-hero.jpg");
+  }
+}
+
+.header__nav-bar-container, .footer__nav-bar-container {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header__nav-list-container, .footer__nav-list-container {
+  padding: .5em;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.header__nav-list-container > li:not(:first-of-type), .footer__nav-list-container > li:not(:first-of-type) {
+  margin-left: 2em;
+}
+
+.header__nav-list-item, .footer__nav-list-item {
+  position: relative;
+}
+
+.header__nav-list-item::after, .footer__nav-list-item::after {
+  content: "";
+  width: 40%;
+  height: 0;
+  border-bottom: 2px solid transparent;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  transition: all .25s linear;
+}
+
+.header__nav-list-item:hover::after, .footer__nav-list-item:hover::after {
+  border-bottom: 2px solid white;
+}
+
+.header__nav-link, .footer__nav-link {
+  font-size: .85em;
+  font-weight: 400;
+  padding-bottom: .55em;
+}
+
+.header__hamburger-container {
+  background-color: transparent;
+}
+
+.header__hamburger-icon {
+  cursor: pointer;
+}
+
+.header__hero-heading {
+  font-size: 4.25vmax;
+  width: 100%;
+  max-width: 650px;
+  border: 2px solid white;
+  padding: 3.12rem;
+  margin-bottom: 1em;
+}
+
+.logo-image {
+  width: 80%;
+}
+
+.about__container {
+  position: relative;
+  padding: 10em 0 0;
+}
+
+@media (max-width: 1050px) {
+  .about__container {
+    text-align: center;
+    display: flex;
+    flex-flow: row wrap;
+    padding: 5em 0;
+  }
+}
+
+.about__img-container {
+  width: 100%;
+  max-width: 730px;
+}
+
+@media (max-width: 1050px) {
+  .about__img-container {
+    margin: 0 auto;
+  }
+}
+
+.about__description-container {
+  background-color: white;
+  padding: 6em 0 0 6em;
+  width: 100%;
+  max-width: 546px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+@media (max-width: 1050px) {
+  .about__description-container {
+    position: relative;
+    text-align: center;
+    padding: 0;
+  }
+}
+
+.about__description--header {
+  margin-bottom: .35em;
+}
+
+@media (max-width: 1050px) {
+  .about__description--header {
+    margin-top: .8em;
+    margin-bottom: .5em;
+  }
+}
+
+.about__description--paragraph {
+  font-weight: 300;
+  color: #8c8c8c;
+  line-height: 1.8em;
+  font-size: .9em;
+}
+
+.vr-image {
+  width: 100%;
+}
+
+.creations__container {
+  margin-top: 10em;
+  margin-bottom: 10em;
+}
+
+@media (max-width: 1050px) {
+  .creations__container {
+    margin-top: 0;
+    padding: 0;
+  }
+}
+
+.creations__flex-top, .footer__flex-top, .footer__flex-bottom {
+  margin-bottom: 2.5rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media (max-width: 1050px) {
+  .creations__header, .about__description--header {
+    width: 100%;
+  }
+}
+
+.creations__list-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-content: flex-start;
+}
+
+.creations__list-item:nth-of-type(1) {
+  background-image: url("../images/desktop/image-deep-earth.jpg");
+}
+
+.creations__list-item:nth-of-type(2) {
+  background-image: url("../images/desktop/image-night-arcade.jpg");
+}
+
+.creations__list-item:nth-of-type(3) {
+  background-image: url("../images/desktop/image-soccer-team.jpg");
+}
+
+.creations__list-item:nth-of-type(4) {
+  background-image: url("../images/desktop/image-grid.jpg");
+}
+
+.creations__list-item:nth-of-type(5) {
+  background-image: url("../images/desktop/image-from-above.jpg");
+}
+
+.creations__list-item:nth-of-type(6) {
+  background-image: url("../images/desktop/image-pocket-borealis.jpg");
+}
+
+.creations__list-item:nth-of-type(7) {
+  background-image: url("../images/desktop/image-curiosity.jpg");
+}
+
+.creations__list-item:nth-of-type(8) {
+  background-image: url("../images/desktop/image-fisheye.jpg");
+}
+
+@media (max-width: 1050px) {
+  .creations__list-item:nth-of-type(1) {
+    background-image: url("../images/mobile/image-deep-earth.jpg");
+  }
+  .creations__list-item:nth-of-type(2) {
+    background-image: url("../images/mobile/image-night-arcade.jpg");
+  }
+  .creations__list-item:nth-of-type(3) {
+    background-image: url("../images/mobile/image-soccer-team.jpg");
+  }
+  .creations__list-item:nth-of-type(4) {
+    background-image: url("../images/mobile/image-grid.jpg");
+  }
+  .creations__list-item:nth-of-type(5) {
+    background-image: url("../images/mobile/image-from-above.jpg");
+  }
+  .creations__list-item:nth-of-type(6) {
+    background-image: url("../images/mobile/image-pocket-borealis.jpg");
+  }
+  .creations__list-item:nth-of-type(7) {
+    background-image: url("../images/mobile/image-curiosity.jpg");
+  }
+  .creations__list-item:nth-of-type(8) {
+    background-image: url("../images/mobile/image-fisheye.jpg");
+  }
+}
+
+.creations__list-item {
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 1em;
+  flex: 1 0 calc(1114px/5);
+  height: 450px;
+}
+
+.creations__list-item:hover .creations__list-link {
+  background-color: white;
+  color: black;
+  opacity: .7;
+}
+
+@media (max-width: 1050px) {
+  .creations__list-item {
+    background-position: center top;
+    max-height: 180px;
+  }
+}
+
+.creations__list-link {
+  font-weight: 300;
+  padding: 22em 2em 0;
+  width: 100%;
+  height: 100%;
+  transition: all .5s linear;
+}
+
+@media (max-width: 1050px) {
+  .creations__list-link {
+    padding: 6em 2em 0;
+  }
+}
+
+.creations__btn--2 {
+  margin: 1.5em auto 1em;
+}
+
+small {
+  display: inline-block;
+  font-size: 2em;
+}
+
+small[id="smaller"] {
+  width: 50%;
+}
+
+@media (max-width: 1050px) {
+  small {
+    width: 60%;
+    min-width: 175px;
+  }
+  small[id="smaller"] {
+    width: 30%;
+    min-width: 145px;
+  }
+}
+
+.footer__container {
+  background-color: black;
+  padding: 2.5em 0;
+}
+
+.footer__flex-top, .footer__flex-bottom {
+  padding: 0;
+  flex: 0 0 370px;
+}
+
+.footer__flex-bottom {
+  margin-bottom: 0;
+}
+
+@media (max-width: 950px) {
+  .footer__flex-bottom {
+    display: flex;
+    flex-flow: column wrap;
+  }
+}
+
+.footer__nav-bar-container {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__nav-list-container {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
+
+.footer__copyright {
+  color: #8c8c8c;
+}
+
+@media (min-width: 1050px) {
+  .hide--desktop {
+    display: none;
+  }
+}
+
+@media (max-width: 1050px) {
+  .hide--mobile {
+    display: none;
+  }
+}
